Rename 'yyyy' to 'year'
