# src/api/species/specie.controller.js
@@ -130,7 +130,7 @@ export async function read(req, res) {
             url: 1,
             day: 1,
             month: 1,
-            yyyy: 1,
+            year: 1,
             suggestedStateProvince: 1,
             suggestedCounty: 1,
             environmentalOutlier: 1,
@@ -198,7 +198,7 @@ export async function readValidForGroup(req, res) {
             url: 1,
             day: 1,
             month: 1,
-            yyyy: 1,
+            year: 1,
             suggestedStateProvince: 1,
             suggestedCounty: 1,
             environmentalOutlier: 1,
